[tool.poetry]
name = "claude-code-server"
version = "0.1.0"
description = "A Python library to interact with Claude Code CLI programmatically"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/viralt/claude-code-server"
keywords = ["claude", "ai", "agent", "anthropic", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
redis = {version = "^5.0.0", optional = true}
fastapi = {version = "^0.110.0", optional = true}
uvicorn = {version = "^0.27.0", extras = ["standard"], optional = true}
pyyaml = {version = "^6.0.1", optional = true}
sse-starlette = {version = "^2.0.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]
server = ["fastapi", "uvicorn", "pyyaml", "sse-starlette"]
all = ["redis", "fastapi", "uvicorn", "pyyaml", "sse-starlette"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
